# MPGD_Simulation

./: .gitignore  README.md  license  setup-garf-local.sh  setup-garf-lxplus.sh  setup-garf-new.sh  setup-garf.sh
ANSYS/: GEM.txt  base.txt  single_GEM_example.txt
ANSYS/single_GEM_0620/: ELIST.lis  NLIST.lis  PRNSOL.lis  single_GEM_0620.txt
CMS_4GEM_base/CMS_4GEM_1HV/3460V/: MPLIST.lis
GEM_SIM/Full_SIM/: CMakeLists.txt  Full_SIM.cc  Full_SIM.hh
MPGDNN/: setup.sh
MPGDNN/cfgs/: gain_train.txt
MPGDNN/lib/: ReadInput.py
MPGDNN/train_base/: Train_Manager.py
MPGDNN/train_core/: basic.py  model.ckpt
MPGDNN/train_script/: basic-gpu.py  basic.py  gain_train.py
PyGarfield/: Full_SIM.py  Full_SIM_config.txt  full_sim_result.root
PyGarfield/Tools/: checkFields.py  full_sim_result.root  test.py
PyfieldTools/: checkFields.py  my_ml_env.yaml  plot_vars.py  simAnalysis.py  util.py
Simulation/: Full_SIM_config.txt  Functions.py  OutputHelper.py  ReadInput.py  SimProducer.py  Simulation.py  Simulation_Manager.py  TreeReaderArrayTools.py  checkFields.py  run.sh
gas/: ar_45_co2_15_cf4_40.gas  ar_70_co2_30.gas  ar_90_co2_10.gas  ar_90_ic4h10_10.gas  ar_93_co2_7.gas
